--- a/src/blog/2023-09-20-abcd.md
+++ b/src/blog/2023-09-20-abcd.md
@@ -5,7 +5,7 @@ author: werwer
 date: '2023-09-20T20:53:13+05:30'
 tags:
   - post
-thumbnail: /assets/blog/sherry-christian-8myh76_3m2u-unsplash.jpg
+image: /assets/blog/sherry-christian-8myh76_3m2u-unsplash.jpg
 imageAlt: tiger shit
 ---
 pwoeiprpu9]r
